[project]
name = "temp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "huggingface-hub>=0.34.3",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "mysql-connector-python>=9.4.0",
    "python-dotenv>=1.1.1",
    "torch>=2.7.1",
    "transformers>=4.54.1",
]
